# tidyframe

./: .dockerignore  .gitignore  CHANGELOG.md  NGINX_SSL_OPERATIONS.md  PRODUCTION_TESTING_CHECKLIST.md  TidyFrame AI Privacy Policy- FINAL USE.pdf:Zone.Identifier  TidyFrame AI Privacy Policy- FINAL USE.pdf:mshield  TidyFrame AI Terms of Service_FINAL USE.pdf:Zone.Identifier  TidyFrame AI Terms of Service_FINAL USE.pdf:mshield  docker-compose.prod.yml  docker-compose.yml  fix-tailwind-classes.sh  logo and name_transpararent.png:mshield  logo only - transparent.png:mshield  logo only - white background.png:mshield  redis.Dockerfile  render.yaml  tidyframe.sh
backend/: .dockerignore  .env.example  .flake8  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  run_tests.sh
backend/alembic/: env.py
backend/app/: main.py  verify_improvements.py
backend/migrations/: add_custom_monthly_limit.sql
backend/results/: processed_results_016e709d-86c3-45a0-b614-97796ceff337_20250910_040139.xlsx  processed_results_028423d3-aaa1-418c-9afe-d44b36659cc3_20250910_215809.xlsx  processed_results_02fbc9c4-8fe9-42aa-90d3-8155cca36a87_20250906_230807.xlsx  processed_results_09b74193-28dd-49d3-adbb-5bcd85096f85_20250907_003214.xlsx  processed_results_0c1df8d3-151c-477e-83ce-2af42ac69ebb_20250910_015012.xlsx  processed_results_0c7b6a42-ab55-4ad8-833d-901057b6c609_20250906_233256.xlsx  processed_results_0e367fb0-b493-401f-a5b7-2380cf301522_20250928_003001.xlsx  processed_results_14c7b231-e131-4d20-b12d-e96e32771d0d_20250912_002100.xlsx  processed_results_1b6b6f60-de36-40e8-a059-2c5b55c03456_20250910_040516.xlsx  processed_results_2a5a1a6b-7213-4391-8892-58f3ae2e4ccb_20250910_014000.xlsx  processed_results_2ab7cb5b-e40f-4264-af02-15b58d0cc1d6_20250910_183244.xlsx  processed_results_2f812d53-602b-4307-a91f-6bfcee1c0aae_20250909_144327.xlsx  (+58 more)
backend/scripts/: audit_overage_users.py  backup.sh  check-ssl-expiry.sh  (+14 more)
(+244 files in other folders)
